--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.12",
+    "cors": "^2.8.5",
     "nodemon": "^3.1.4",
     "typescript": "^5.5.4"
   }
